minitrace-macro/tests/trace/ui/err/010-optional-is-not-assignment.stderr
error: expected `=`
 --> tests/trace/ui/err/010-optional-is-not-assignment.rs:3:1
  |
3 | #[trace(name = "a", enter_on_poll)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `trace` (in Nightly builds, run with -Z macro-backtrace for more info)
