minitrace-macro/tests/trace/ui/err/010-optional-is-not-assignment.rs
use minitrace::trace;

#[trace(name = "a", enter_on_poll)]
fn f() {}

fn main() {
    f();
}
